# notefix

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: macos-signing.md
e2e/: about.spec.ts  app.spec.ts  combined.spec.ts  contexts.spec.ts  copy-format.spec.ts  dashboard.spec.ts  export-format.spec.ts  export.spec.ts  i18n.spec.ts  link-preview.spec.ts  mcp.spec.ts  menu.spec.ts  settings.spec.ts  shortcuts.spec.ts  syscheck.spec.ts  tauri-mock.ts
scripts/: macos-release.sh  set-version.sh
src/: App.test.tsx  App.tsx  api.ts  calendarGrid.test.ts  calendarGrid.ts  codeBlock.test.ts  codeBlock.ts  colors.ts  combined.ts  contexts.test.ts  contexts.ts  copyFormat.test.ts  copyFormat.ts  dashboardWidgets.test.tsx  dashboardWidgets.tsx  dates.test.ts  dates.ts  dnd.test.ts  dnd.ts  dndkit.test.ts  dndkit.ts  editorStatus.test.ts  editorStatus.ts  export.ts  folderIcons.test.ts  folderIcons.ts  imageType.test.ts  imageType.ts  index.css  licenses.test.ts  licenses.ts  linkMeta.test.ts  linkMeta.ts  linkPreviewRoundTrip.test.ts  main.tsx  markdown.test.ts  markdown.ts  mdHighlight.ts  preview.ts  saveImage.test.ts  (+19 more)
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: aggregate.rs  auth.rs  commands.rs  config.rs  export.rs  folders.rs  images.rs  imagesync.rs  lib.rs  linkmeta.rs  main.rs  mcp.rs  migrate.rs  profiles.rs  revisions.rs  settings.rs  stats.rs  storage.rs  sync.rs  syscheck.rs  tray.rs  update.rs  widgetshare.rs
src-tauri/swift/: widget_reload.swift
src-tauri/widget/: .gitignore  build.sh  project.yml
src-tauri/widget/NotefixWidget/: Info.plist  NotefixWidget.entitlements  NotefixWidget.swift
src-tauri/widget/NotefixWidget.xcodeproj/: project.pbxproj
src/components/: CloseDialog.test.tsx  CloseDialog.tsx  CombinedNoteList.test.tsx  CombinedNoteList.tsx  ConfettiEasterEgg.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  ContextMenu.test.tsx  ContextMenu.tsx  ContextSwitcher.test.tsx  ContextSwitcher.tsx  Dashboard.test.tsx  Dashboard.tsx  DeleteFolderModal.test.tsx  DeleteFolderModal.tsx  ExportDialog.test.tsx  ExportDialog.tsx  ExportFormatModal.test.tsx  ExportFormatModal.tsx  FindBar.test.tsx  FindBar.tsx  FolderCustomizer.test.tsx  FolderCustomizer.tsx  FolderIcon.test.tsx  FolderIcon.tsx  FolderRow.tsx  HistoryModal.test.tsx  HistoryModal.tsx  IconCombobox.test.tsx  IconCombobox.tsx  LinkPreviewNode.menu.test.tsx  LinkPreviewNode.test.tsx  LinkPreviewNode.tsx  Logo.test.tsx  Logo.tsx  NoteEditor.test.tsx  NoteEditor.tsx  NoteList.test.tsx  NoteList.tsx  NoteRow.test.tsx  (+23 more)
src/editor/: searchHighlight.ts
src/export/: docHtml.test.ts  docHtml.ts  exporters.ts  render.ts
src/hooks/: useFolders.test.ts  useFolders.ts  (+5 more)
(+8 files in other folders)
