[package]
name = "notefix"
version = "0.2.0"
description = "Notefix — a lightweight sticky-note desktop app"
authors = ["noix.dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "notefix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
dirs = "6.0.0"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-deep-link = "2"
base64 = "0.22"
regex = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "http2", "json", "multipart", "query"] }
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1"] }
tokio = { version = "1", default-features = false, features = ["net", "sync", "time", "macros"] }
# Auth bridge (A1): PKCE + OS keychain token storage.
keyring = { version = "3", features = ["apple-native"] }
sha2 = "0.10"
rand = "0.8"
url = "2"
time = { version = "0.3", features = ["parsing", "formatting"] }

[dev-dependencies]
tempfile = "3.27.0"

